# DataInsight-Hub-Pro

./: .git-credential-helper.sh  .modules  .replit  README.md  app.py  pyproject.toml  replit.md  reprot  sample_resume.txt
.streamlit/: config.toml
attached_assets/: Pasted-Add-Advanced-Excel-Workspace-to-DataInsightHubPro-Build_1781958954640.txt  Pasted-DataInsightHub-is-a-feature-rich-interactive-data-analytics-platform-developed-using-Streamlit-des-1753646535688_1753646535689.txt  _1800+ Talent Acquisition Database _1753648527246.xlsx
styles/: custom.css
utils/: data_processor.py  excel_workspace.py  filters.py  insight_generator.py  resume_analyzer.py  sample_data.py  statistics.py  visualizations.py
