[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
]
